fixed z-index mobile menu

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -184,7 +184,7 @@
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
       background: var(--creme);
-      z-index: 999;
+      z-index: 1000;
       flex-direction: column;
       align-items: center;
       justify-content: center;
